--- a/htlp.cabal
+++ b/htlp.cabal
@@ -21,6 +21,8 @@ extra-source-files:  CHANGELOG.md, README.md
 library
   exposed-modules:   HTLP.Intro
                      HTLP.Singletons
+                     HTLP.MyTypes
+                     
   -- other-modules:
   build-depends:     base >=4.13 && <4.14
                    , singletons
